--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Inter:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url( 'https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
 * {
-	margin: 0;
-	padding: 0;
+ font-family: 'Lato', sans-serif;
+//  font-family: "Inter", serif;
+ box-sizing: border-box;
+ margin: 0;
+ padding: 0;
+ scroll-behavior: smooth;
 	body {
 		h1 {
 			font-size: clamp(2.5rem, 4vw, 4rem);
