--- a/src/style.scss
+++ b/src/style.scss
@@ -13,7 +13,9 @@
   padding: 0;
   font-family: abstracts.$font;
   font-weight: normal;
+  box-sizing: border-box;
 }
+
 
 .display1 {
   font-size: abstracts.$display1;
@@ -36,7 +38,7 @@ h3 {
   font-size: abstracts.$heading3;
 }
 
-h3 {
+h4 {
   font-size: abstracts.$heading4;
 }
 
@@ -92,3 +94,101 @@ input, input::placeholder {
   }
 }
 
+
+
+.erro_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.container {
+  max-width: 1600px;
+  width: 100%;
+  padding: 0 clamp(10px, 5vw, 60px);
+  margin: 0 auto;
+}
+.text-white {
+  color: white;
+}
+.mb-flex,
+.mb-show {
+  display: none;
+}
+.mw-520 {
+  max-width: 520px;
+  width: 100%;
+}
+.black-2 {
+  color: rgba(10, 10, 10,.8);
+}
+.pointer {
+  cursor: pointer;
+}
+.mw-150 {
+  max-width: 150px;
+  width: 100%;
+}
+.mw-101 {
+  max-width: 101px;
+  width: 100%;
+}
+.mw-60 {
+  max-width: 60px;
+  width: 100%;
+}
+.h-60 {
+  height: 60px;
+}
+.shimmer {
+  width: 200%;
+  background-image: linear-gradient(90deg, rgba(239, 238, 238, 0.1) 25%, white 50%, rgba(239, 238, 238, 0.1) 75%);
+  background-size: 200% 100%;
+  animation: shimmer 2s infinite;
+  background-color: rgba(209, 205, 205,.3);
+}
+@keyframes shimmer {
+  0% {
+      background-position: 200% 0;
+      // background-color: $grey-ECE;
+  }
+  100% {
+      background-position: -200% 0;
+      // background-color: $grey-ECE;
+  }
+}
+.input-box {
+  border-radius: 0.4rem;
+  border: 1px solid gray;
+  background: white;
+  color: black;
+  width: 100%;
+  max-width: 34rem;
+  padding: 0.6rem 1rem;
+  outline: none;
+  &::placeholder {
+      color: black;
+      opacity: 0.5;
+  }
+}
+.outlate-wrapper {
+  padding-top: 70px;
+}
+.btn-primary{
+  border: none;
+  outline: none;
+  padding: 12px 25px;
+  background: abstracts.$darkblue;
+  color: white;
+  border-radius: 0.4rem;
+  font-size: 1.2rem;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &:hover{
+    background: abstracts.$midpurple;
+  }
+}
