--- a/src/styles/abstracts/_fonts.scss
+++ b/src/styles/abstracts/_fonts.scss
@@ -1,5 +1,18 @@
 $font: "Outfit", sans-serif;
 
+$font-size-16: 16px;
+$font-size-18: 18px;
+$font-size-14: 14px;
+$font-size-12: 12px;
+$font-size-10: 10px;
+$font-size-8: 8px;
+$font-size-20: 20px;
+$font-size-22: 22px;
+$font-size-24: 24px;
+$font-size-26: 26px;
+$font-size-28: 28px;
+$font-size-30: 30px;
+
 $display1: 80px;
 $display2: 48px;
 $heading1: 40px;
