--- a/src/style.scss
+++ b/src/style.scss
@@ -192,3 +192,106 @@ input, input::placeholder {
     background: abstracts.$midpurple;
   }
 }
+
+.sub-head-title-frame{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
+
+}
+.header-details{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 20px;
+  a{
+    display: flex;
+    align-items: center;
+    margin-top: 2px;
+    font-size: 30px;
+  }
+}
+
+.loader-wrapper {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgb(0 0 0 / 87%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .loader {
+      transform: rotateZ(45deg);
+      perspective: 1000px;
+      border-radius: 50%;
+      width: 88px;
+      height: 88px;
+      color: #f5406a;
+  }
+  .loader:after,
+  .loader:before {
+      content: '';
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: inherit;
+      height: inherit;
+      border-radius: 50%;
+      transform: rotateX(70deg);
+      animation: 1s spin linear infinite;
+  }
+  .loader:after {
+      color: #fadc48;
+      transform: rotateY(70deg);
+      animation-delay: 0.4s;
+  }
+  @keyframes rotate {
+      0% {
+          transform: translate(-50%, -50%) rotateZ(0deg);
+      }
+      100% {
+          transform: translate(-50%, -50%) rotateZ(360deg);
+      }
+  }
+  @keyframes rotateccw {
+      0% {
+          transform: translate(-50%, -50%) rotate(0deg);
+      }
+      100% {
+          transform: translate(-50%, -50%) rotate(-360deg);
+      }
+  }
+  @keyframes spin {
+      0%,
+      100% {
+          box-shadow: 0.2em 0 0 0 currentcolor;
+      }
+      12% {
+          box-shadow: 0.2em 0.2em 0 0 currentcolor;
+      }
+      25% {
+          box-shadow: 0 0.2em 0 0 currentcolor;
+      }
+      37% {
+          box-shadow: -.2em 0.2em 0 0 currentcolor;
+      }
+      50% {
+          box-shadow: -.2em 0 0 0 currentcolor;
+      }
+      62% {
+          box-shadow: -.2em -.2em 0 0 currentcolor;
+      }
+      75% {
+          box-shadow: 0 -.2em 0 0 currentcolor;
+      }
+      87% {
+          box-shadow: 0.2em -.2em 0 0 currentcolor;
+      }
+  }
+
+}
