listening page is added

--- a/src/style.scss
+++ b/src/style.scss
@@ -295,3 +295,10 @@ input, input::placeholder {
   }
 
 }
+
+.mai-error-container-wrapper{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ height: 100dvh;
+}
