--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -102,6 +102,7 @@
     gap: 20px;
     .rocket-card {
         border-radius: 10px;
+        max-width: 340px;
         padding: 0;
         text-align: start;
         color: black;
