last logn toeknt updated fixed

--- a/src/pages/landing/landing.scss
+++ b/src/pages/landing/landing.scss
@@ -227,6 +227,15 @@
         }
     }
 }
+
+.is-login-btn{
+    position: absolute;
+    color: white;
+    top: 40px;
+    font-size: 24px;
+    cursor: pointer;
+    right: 5%;
+}
 @media (max-width: 680px) {
     .Top-rocket-section {
 
